package robos;

public class RoboNotFoundException extends Exception{
    public RoboNotFoundException(String message) {super(message);}
}
